# ChangeLog for dev-java/sun-jai-bin
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jai-bin/ChangeLog,v 1.6 2006/11/28 23:55:57 nichoj Exp $

  28 Nov 2006; Joshua Nichols <nichoj@gentoo.org>
  sun-jai-bin-1.1.2.01-r1.ebuild:
  Added ~ia64.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  sun-jai-bin-1.1.2.01-r1.ebuild:
  Dropping sparc keywords, see #96229

*sun-jai-bin-1.1.2.01-r1 (16 Sep 2005)

  16 Sep 2005; Petteri Räty <betelgeuse@gentoo.org>
  -sun-jai-bin-1.1.2.01.ebuild, +sun-jai-bin-1.1.2.01-r1.ebuild:
  Version bump so that jai-bin users get the jar from this package and removed
  the installing of the LISENCE-jai.txt file.

  26 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  sun-jai-bin-1.1.2.01.ebuild:
  Stable on sparc

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*sun-jai-bin-1.1.2.01 (23 Dec 2004)

  23 Dec 2004; Karl Trygve Kalleberg <karltk@gentoo.org> +metadata.xml,
  +sun-jai-bin-1.1.2.01.ebuild:
  Moved from dev-java/jai-bin

  17 Oct 2004; Thomas Matthijs <axxo@gentoo.org> jai-bin-1.1.2.01.ebuild:
  keyword ~ppc

*jai-bin-1.1.2.01 (17 Oct 2004)

  17 Oct 2004; Thomas Matthijs <axxo@gentoo.org> jai-bin-1.1.2-r3.ebuild,
  +jai-bin-1.1.2.01.ebuild:
  version bump, only install *.so on x86

  17 Oct 2004; Bryan Østergaard,,, <kloeri@gentoo.org>
  jai-bin-1.1.2-r2.ebuild, jai-bin-1.1.2-r3.ebuild:
  Remove alpha keywords.

*jai-bin-1.1.2-r2 (17 Oct 2004)

  17 Oct 2004; Thomas Matthijs <axxo@gentoo.org> jai-bin-1.1.2-r2.ebuild,
  jai-bin-1.1.2-r3.ebuild:
  keyword x86

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

*jai-bin-1.1.2-r3 (31 Jul 2004)

  31 Jul 2004; Thomas Matthijs <axxo@gentoo.org> +jai-bin-1.1.2-r3.ebuild:
  don't install in jdk dir anymore

  30 Jul 2004; Thomas Matthijs <axxo@gentoo.org> :
  move dev-java/jai dev-java/jai-bin
