@@ -1,1 +1,3 @@
 MD5 0a8bc6822b95684c278ee0a0013ba336 jai-1_1_2_01-lib-linux-i586.tar.gz 2603137
+RMD160 b0b1dc67f4cb1db73a2c1159e6ec2c1f133e8b51 jai-1_1_2_01-lib-linux-i586.tar.gz 2603137
+SHA256 3ba65c8cc86cd2b8ff94eb71423464f8eaa8f283f9e58d2e7b781ab151d0eb57 jai-1_1_2_01-lib-linux-i586.tar.gz 2603137
