@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/sun-jai-bin
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jai-bin/ChangeLog,v 1.6 2006/11/28 23:55:57 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jai-bin/ChangeLog,v 1.7 2006/12/21 10:25:41 caster Exp $
+
+  21 Dec 2006; Vlastimil Babka <caster@gentoo.org>
+  sun-jai-bin-1.1.2.01-r1.ebuild:
+  Update HOMEPAGE, SRC_URI and remove fetch restriction wrt bug #158713.
 
   28 Nov 2006; Joshua Nichols <nichoj@gentoo.org>
   sun-jai-bin-1.1.2.01-r1.ebuild:
